[gd_scene load_steps=45 format=1]

[ext_resource path="res://fase4.gd" type="Script" id=1]
[ext_resource path="res://img/quadro.png" type="Texture" id=2]
[ext_resource path="res://img/cat-open-eyes-128.png" type="Texture" id=3]
[ext_resource path="res://img/cat-closed-eyes-128.png" type="Texture" id=4]
[ext_resource path="res://img/back-128.png" type="Texture" id=5]
[ext_resource path="res://img/coracao.png" type="Texture" id=6]
[ext_resource path="res://img/coracao4.png" type="Texture" id=7]
[ext_resource path="res://fases.gd" type="Script" id=8]
[ext_resource path="res://img/b-voltar2.png" type="Texture" id=9]
[ext_resource path="res://img/b-voltar1.png" type="Texture" id=10]
[ext_resource path="res://area.gd" type="Script" id=11]
[ext_resource path="res://img/1-128.png" type="Texture" id=12]
[ext_resource path="res://img/2-128.png" type="Texture" id=13]
[ext_resource path="res://img/3-128.png" type="Texture" id=14]
[ext_resource path="res://img/4-128.png" type="Texture" id=15]
[ext_resource path="res://img/5-128.png" type="Texture" id=16]
[ext_resource path="res://img/6-128.png" type="Texture" id=17]
[ext_resource path="res://img/7-128.png" type="Texture" id=18]
[ext_resource path="res://img/8-128.png" type="Texture" id=19]
[ext_resource path="res://img/9-128.png" type="Texture" id=20]
[ext_resource path="res://img/xx.png" type="Texture" id=21]
[ext_resource path="res://img/Crying_Face_Emoji.png" type="Texture" id=22]
[ext_resource path="res://MenuDerrota.gd" type="Script" id=23]
[ext_resource path="res://img/bVoltar1.png" type="Texture" id=24]
[ext_resource path="res://img/bVoltar2.png" type="Texture" id=25]
[ext_resource path="res://img/bjogar1.png" type="Texture" id=26]
[ext_resource path="res://img/bjogar2.png" type="Texture" id=27]
[ext_resource path="res://img/graduation-124.png" type="Texture" id=28]
[ext_resource path="res://MenuVitoria.gd" type="Script" id=29]
[ext_resource path="res://img/Menu1.png" type="Texture" id=30]
[ext_resource path="res://img/Menu2.png" type="Texture" id=31]
[ext_resource path="res://img/px1.png" type="Texture" id=32]
[ext_resource path="res://img/px2.png" type="Texture" id=33]
[ext_resource path="res://audio/happy-again.ogg" type="AudioStream" id=34]
[ext_resource path="res://audio/1.wav" type="Sample" id=35]
[ext_resource path="res://audio/2.wav" type="Sample" id=36]
[ext_resource path="res://audio/3.wav" type="Sample" id=37]
[ext_resource path="res://audio/loose-sound.wav" type="Sample" id=38]
[ext_resource path="res://audio/wrong.wav" type="Sample" id=39]
[ext_resource path="res://Fase1.gd" type="Script" id=40]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Theme" id=3]


[sub_resource type="SampleLibrary" id=4]

samples/1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 35 )
}
samples/2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 36 )
}
samples/3 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 37 )
}
samples/loose-sound = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 38 )
}
samples/wrong = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 39 )
}

[node name="Fase4" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Bg" type="Sprite" parent="."]

transform/pos = Vector2( 514.426, 302.939 )
transform/scale = Vector2( 1.60232, 2.43848 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 56.0
margin/right = 107.0
margin/bottom = 75.0
text = "Fase 4"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimatedSprite1" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 416.122, 86.3718 )
transform/scale = Vector2( 0.534296, 0.557914 )
frames = SubResource( 1 )
animation = "default"
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 490.62, 87.336 )
transform/scale = Vector2( 0.534296, 0.557914 )
frames = SubResource( 1 )
animation = "default"
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 385.713, 145.681 )
transform/scale = Vector2( 0.534296, 0.557914 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 451.295, 184.87 )
transform/scale = Vector2( 0.534296, 0.557914 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 518.271, 145.33 )
transform/scale = Vector2( 0.534296, 0.557914 )
frames = SubResource( 1 )
animation = "default"
frame = 1
playing = true

[node name="Label 3" type="Label" parent="."]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 547.0
margin/top = 133.0
margin/right = 559.0
margin/bottom = 147.0
text = "="
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Questao1" type="Sprite" parent="."]

transform/pos = Vector2( 631.842, 151.57 )
transform/scale = Vector2( 0.587391, 0.602401 )
texture = ExtResource( 5 )

[node name="Vida1" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 828.855, 76.1681 )
transform/scale = Vector2( 0.277336, 0.25866 )
texture = ExtResource( 6 )

[node name="Xvida1" type="Sprite" parent="Vida1"]

visibility/visible = false
texture = ExtResource( 7 )

[node name="Vida2" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 867.855, 76.1681 )
transform/scale = Vector2( 0.277336, 0.25866 )
texture = ExtResource( 6 )

[node name="Xvida2" type="Sprite" parent="Vida2"]

visibility/visible = false
texture = ExtResource( 7 )

[node name="Vida3" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 907.855, 76.1681 )
transform/scale = Vector2( 0.277336, 0.25866 )
texture = ExtResource( 6 )

[node name="Xvida3" type="Sprite" parent="Vida3"]

visibility/visible = false
transform/pos = Vector2( -3.33643, 0 )
texture = ExtResource( 7 )

[node name="Score" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 716.0
margin/top = 52.0
margin/right = 765.0
margin/bottom = 75.0
text = "Vida:"
align = 1
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 334.0
margin/top = 217.0
margin/right = 492.0
margin/bottom = 231.0
text = "Clique na resposta certa!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Control" type="Control" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 510.0
margin/right = 107.0
margin/bottom = 573.0
script/script = ExtResource( 8 )

[node name="Voltar" type="TextureButton" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -7.0
margin/right = 61.0
margin/bottom = 51.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/hover = ExtResource( 10 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Resposta1" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 403.413, 303.258 )
transform/scale = Vector2( 1.35938, 1.36719 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.58886, 0, 0, 2.71472, -1.28735, 0.731415 )
shapes/0/trigger = false
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resposta1"]

transform/pos = Vector2( -1.28735, 0.731415 )
transform/scale = Vector2( 2.58886, 2.71472 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Resposta1"]

transform/pos = Vector2( -0.581482, 0.365723 )
transform/scale = Vector2( 0.408046, 0.42 )
texture = ExtResource( 12 )

[node name="Resposta2" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 494.541, 303.258 )
transform/scale = Vector2( 1.35938, 1.36719 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.58886, 0, 0, 2.71472, -1.28735, 0.731415 )
shapes/0/trigger = false
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resposta2"]

transform/pos = Vector2( -1.28735, 0.731415 )
transform/scale = Vector2( 2.58886, 2.71472 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Resposta2"]

transform/pos = Vector2( -0.581482, 0.365723 )
transform/scale = Vector2( 0.408046, 0.42 )
texture = ExtResource( 13 )

[node name="Resposta3" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 585.693, 303.258 )
transform/scale = Vector2( 1.35938, 1.36719 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.58886, 0, 0, 2.71472, -1.28735, 0.731415 )
shapes/0/trigger = false
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resposta3"]

transform/pos = Vector2( -1.28735, 0.731415 )
transform/scale = Vector2( 2.58886, 2.71472 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Resposta3"]

transform/pos = Vector2( -0.581482, 0.365723 )
transform/scale = Vector2( 0.408046, 0.42 )
texture = ExtResource( 14 )

[node name="Resposta4" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 403.413, 392.51 )
transform/scale = Vector2( 1.35938, 1.36719 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.58886, 0, 0, 2.71472, -1.28735, 0.731415 )
shapes/0/trigger = false
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resposta4"]

transform/pos = Vector2( -1.28735, 0.731415 )
transform/scale = Vector2( 2.58886, 2.71472 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Resposta4"]

transform/pos = Vector2( -0.581482, 0.365723 )
transform/scale = Vector2( 0.408046, 0.42 )
texture = ExtResource( 15 )

[node name="Resposta5" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 494.541, 392.51 )
transform/scale = Vector2( 1.35938, 1.36719 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.58886, 0, 0, 2.71472, -1.28735, 0.731415 )
shapes/0/trigger = false
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resposta5"]

transform/pos = Vector2( -1.28735, 0.731415 )
transform/scale = Vector2( 2.58886, 2.71472 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Resposta5"]

transform/pos = Vector2( -0.581482, 0.365723 )
transform/scale = Vector2( 0.408046, 0.42 )
texture = ExtResource( 16 )

[node name="Resposta6" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 585.693, 392.51 )
transform/scale = Vector2( 1.35938, 1.36719 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.58886, 0, 0, 2.71472, -1.28735, 0.731415 )
shapes/0/trigger = false
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resposta6"]

transform/pos = Vector2( -1.28735, 0.731415 )
transform/scale = Vector2( 2.58886, 2.71472 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Resposta6"]

transform/pos = Vector2( -0.581482, 0.365723 )
transform/scale = Vector2( 0.408046, 0.42 )
texture = ExtResource( 17 )

[node name="Resposta7" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 403.413, 482.588 )
transform/scale = Vector2( 1.35938, 1.36719 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.58886, 0, 0, 2.71472, -1.90167, 0.731415 )
shapes/0/trigger = false
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resposta7"]

transform/pos = Vector2( -1.90167, 0.731415 )
transform/scale = Vector2( 2.58886, 2.71472 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Resposta7"]

transform/pos = Vector2( -0.581482, 0.365723 )
transform/scale = Vector2( 0.408046, 0.42 )
texture = ExtResource( 18 )

[node name="Resposta8" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 494.541, 482.588 )
transform/scale = Vector2( 1.35938, 1.36719 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.58886, 0, 0, 2.71472, -1.28735, 0.731415 )
shapes/0/trigger = true
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resposta8"]

transform/pos = Vector2( -1.28735, 0.731415 )
transform/scale = Vector2( 2.58886, 2.71472 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Resposta8"]

visibility/behind_parent = true
transform/pos = Vector2( -0.581482, 0.365723 )
transform/scale = Vector2( 0.408046, 0.42 )
texture = ExtResource( 19 )

[node name="Resposta9" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 585.693, 482.588 )
transform/scale = Vector2( 1.35938, 1.36719 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 2.58886, 0, 0, 2.71472, -1.18927, -0.170395 )
shapes/0/trigger = false
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 11 )

[node name="CollisionShape2D1" type="CollisionShape2D" parent="Resposta9"]

transform/pos = Vector2( -1.18927, -0.170395 )
transform/scale = Vector2( 2.58886, 2.71472 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Resposta9"]

transform/pos = Vector2( -0.581482, 0.365723 )
transform/scale = Vector2( 0.408046, 0.42 )
texture = ExtResource( 20 )

[node name="Erro" type="Sprite" parent="."]

visibility/visible = false
visibility/blend_mode = 4
transform/pos = Vector2( 854.038, 503.216 )
transform/scale = Vector2( 0.577409, 0.676372 )
texture = ExtResource( 21 )

[node name="PopupErro" type="PopupPanel" parent="."]

process/pause_mode = 1
visibility/visible = false
visibility/blend_mode = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 239.0
margin/top = 201.0
margin/right = 746.0
margin/bottom = 532.0
popup/exclusive = true

[node name="Sprite" type="Sprite" parent="PopupErro"]

transform/pos = Vector2( 248.571, 165.101 )
transform/scale = Vector2( 0.798532, 1.32838 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="PopupErro"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = SubResource( 3 )
margin/left = 170.0
margin/top = 108.0
margin/right = 258.0
margin/bottom = 127.0
text = "Você perdeu"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite 2" type="Sprite" parent="PopupErro"]

transform/pos = Vector2( 121.672, 132.158 )
transform/scale = Vector2( 0.123085, 0.116454 )
texture = ExtResource( 22 )

[node name="Control" type="Control" parent="PopupErro"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 53.0
margin/top = 182.0
margin/right = 439.0
margin/bottom = 283.0
script/script = ExtResource( 23 )

[node name="ErrVoltar" type="TextureButton" parent="PopupErro/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 32.0
margin/right = 175.0
margin/bottom = 90.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 24 )
textures/hover = ExtResource( 25 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="ErrJogar" type="TextureButton" parent="PopupErro/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 31.0
margin/right = 380.0
margin/bottom = 89.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 26 )
textures/hover = ExtResource( 27 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="PopupAcerto" type="PopupPanel" parent="."]

process/pause_mode = 2
visibility/visible = false
visibility/blend_mode = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 211.0
margin/top = 206.0
margin/right = 798.0
margin/bottom = 529.0
popup/exclusive = true

[node name="Sprite" type="Sprite" parent="PopupAcerto"]

editor/display_folded = true
transform/pos = Vector2( 291.324, 161.283 )
transform/scale = Vector2( 0.919669, 1.33737 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="PopupAcerto/Sprite"]

rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = SubResource( 3 )
margin/left = -44.0
margin/top = -61.0
margin/right = 28.0
margin/bottom = -43.0
text = "Parabéns!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite 2" type="Sprite" parent="PopupAcerto/Sprite"]

transform/pos = Vector2( -117.005, -39.7407 )
transform/rot = 20.0
transform/scale = Vector2( 0.625991, 0.924956 )
texture = ExtResource( 28 )

[node name="Control" type="Control" parent="PopupAcerto"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 98.0
margin/top = 164.0
margin/right = 484.0
margin/bottom = 265.0
script/script = ExtResource( 29 )

[node name="VitVoltar" type="TextureButton" parent="PopupAcerto/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 32.0
margin/right = 175.0
margin/bottom = 90.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 30 )
textures/hover = ExtResource( 31 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="VitProx" type="TextureButton" parent="PopupAcerto/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 32.0
margin/right = 380.0
margin/bottom = 90.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 32 )
textures/hover = ExtResource( 33 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 34 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Fase1" type="Node2D" parent="."]

script/script = ExtResource( 40 )


